[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/ReportEmployeeList/ReportList.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HelperScenes/ListHolder/ListHolder.tscn" type="PackedScene" id=2]

[node name="UpdateList" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -157.0
margin_top = 10.0
margin_right = 177.0
margin_bottom = 590.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 331.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="ListHolder" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_bottom = 0.0
margin_right = 326.0
margin_bottom = 521.0
size_flags_vertical = 11
title = "Which Employee"
list_type = 3

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_left = 113.0
margin_top = 525.0
margin_right = 213.0
margin_bottom = 565.0
rect_min_size = Vector2( 100, 40 )
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Cancel"
[connection signal="load_time" from="Panel/MarginContainer/VBoxContainer/ListHolder" to="." method="_on_ListHolder_load_time"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
